# AB-FINAL-UNIT-20

./: CMakeLists.txt  Intermedia-2.cpp  Intermedia-2.h  Prueba_CMake.cpp  Prueba_CMake.h  README.md  main.cpp
datos/: citas.csv  medicos.csv  pacientes.csv
datos_hospital/: medicos.csv
include/: cita.hpp  especialidad.hpp  fecha.hpp  historial_clinico.hpp  medico.hpp  paciente.hpp  persona.hpp  sistema_gestion_clinica.hpp
output/datos/: citas.csv  pacientes.csv
src/: Cita.cpp  Cita.hpp  GestionHospital.cpp  GestionHospital.hpp  Medico.cpp  Medico.hpp  Paciente.cpp  Paciente.hpp  Persona.cpp  Persona.hpp  cita.cpp  especialidad.cpp  fecha.cpp  historial_clinico.cpp  main.cpp  medico.cpp  paciente.cpp  persona.cpp  sistema_gestion_clinica.cpp
